# -*- coding: utf-8 -*-
[metadata]
name = cercospora
summary = Semantic segmentation with Unet
description-file =
    README.md
author = Adnane
author-email = adnane.oussayer@gmail.com
version = 0.0.1
license = MIT
home-page = https://github.com/Adnane-DS/cercospora
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    cercospora

[entry_points]
deepaas.v2.model =
    cercospora = cercospora.api
